// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/MenuItemToggleModalRedux > should match snapshot 1`] = `
<div>
  <button
    class="style--none "
  >
    <span
      class="MenuItem__primary-text"
    >
      Whatever
    </span>
  </button>
</div>
`;

exports[`components/MenuItemToggleModalRedux > should match snapshot with extra text 1`] = `
<div>
  <button
    class="style--none MenuItem__with-help"
  >
    <span
      class="MenuItem__primary-text"
    >
      Whatever
    </span>
    <span
      class="MenuItem__help-text"
    >
      Extra text
    </span>
  </button>
</div>
`;
